--- a/package.json
+++ b/package.json
@@ -3,13 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "prisma generate && next dev",
-    "build": "prisma generate && next build",
+    "dev": "next dev",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^5.1.1",
     "@tailwindcss/forms": "^0.5.4",
     "@types/node": "20.4.8",
     "@types/react": "18.2.18",
@@ -24,8 +23,5 @@
     "react-icons": "^4.10.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
-  },
-  "devDependencies": {
-    "prisma": "^5.1.1"
   }
 }
